samples/_failures_safe/1761161607_5a0506_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_997abcf4.c:148:1: error: expected identifier or ‘(’ at end of input
  148 | const char
      | ^~~~~
